<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="etFullAmountHint">Enter full amount</string>
    <string name="pct_10">10%</string>
    <string name="pct_15">15%</string>
    <string name="pct_20">20%</string>
    <string name="tip_message">Tip: %1$s (%2$s%%).  Total: %3$s</string>
    <string name="amount_error_msg">Please enter a valid amount</string>
    <string name="round_total_switch">Round to whole dollar</string>

</resources>
